--- a/product_list/css/style.css
+++ b/product_list/css/style.css
@@ -92,3 +92,29 @@ body {
 .my-popover-content {
     display:none;
 }
+
+
+.home-sell-button{width:140px;height:140px;background-image:url(//assets.kaidee.com/blackpearl/ff8cf73f8638040cc0f30e2cf8980588/images/sell-button.png);background-repeat:no-repeat}
+
+.home-buy-button{width:110px;height:110px;background-image:url(//assets.kaidee.com/blackpearl/ff8cf73f8638040cc0f30e2cf8980588/images/buy-button.png);background-repeat:no-repeat;margin-top:15px;margin-bottom:27px}
+
+#circle {
+      width: 50px;
+      height: 50px;
+      -webkit-border-radius: 25px;
+      -moz-border-radius: 25px;
+      border-radius: 25px;
+      background: red;
+    }
+
+
+.circle-multiline {
+    display: table-cell;
+    height: 200px;
+    width: 200px;
+    text-align: center;
+    vertical-align: middle;
+    border-radius: 50% !important;
+    background: orange;
+    color: white;
+}
