--- a/Kaidee/KaideeV/templates/verifyLevel3.html
+++ b/Kaidee/KaideeV/templates/verifyLevel3.html
@@ -91,8 +91,8 @@
     </div>
     <div class="upload-container">
       <div class="col-md-4" style="border-radius: 10px; background: #eeeeee; width: 550px; height: 350px;">
-        <div style="border-radius: 10px; margin-top:25px; background-color:white; height:250px;">
-        </div>
+        <img src="img/choosePic.png" style="border-radius: 10px; margin-top:25px; margin-left:25px; background-color:white; height:250px;">
+        </img>
         <div style="display:inline-block; border-radius: 10px; padding-left: 15px; padding-right:15px; background-color:#6DDA58  ; color:white; font-size:25px; height:50px; line-height:50px;position:absolute; bottom:10px; left:225px; ">
           อัพโหลด
         </div>
