--- a/Kaidee/KaideeV/templates/help.html
+++ b/Kaidee/KaideeV/templates/help.html
@@ -112,7 +112,7 @@
                        var Category16 = []
 
             window.onload = function() {
-               $.getJSON('http://snowywords2.ddns.net:5000/faq/all', function(data) {
+               $.getJSON('./faq/all', function(data) {
 
                    console.log(data)
 //                   console.log(data[0].Title)
