--- a/Kaidee/KaideeV/templates/verificationUpload.html
+++ b/Kaidee/KaideeV/templates/verificationUpload.html
@@ -61,7 +61,7 @@
       <div class="panel panel-primary">
         <div class="panel-heading">กรุณาอัพโหลดรูปภาพบัตรประชาชนของท่านเพื่อใช้ในการยืนยันตัวตน</div>
         <div class="panel-body text-center">
-          <form  action="http://snowywords2.ddns.net:5000/upload" method="post" enctype="multipart/form-data">
+          <form  action="./upload" method="post" enctype="multipart/form-data">
           <!-- <form  action="http://localhost:5000/upload" method="post" enctype="multipart/form-data"> -->
             <input class="center-block" type="file" name="file" id="file" size="80">
             <h1>
