--- a/Kaidee/KaideeV/templates/faq.html
+++ b/Kaidee/KaideeV/templates/faq.html
@@ -108,7 +108,7 @@
                     //$('#textAndPic').append('<div class="col-md-12"><p>'+result[i].Detail+'</p></div>');
                 }
 
-                $.getJSON('http://snowywords2.ddns.net:5000/session_data', function(data) {
+                $.getJSON('./session_data', function(data) {
 
 
                     if(data == 404){
@@ -133,7 +133,7 @@
                     console.log(typeof(datatosenty));
                     $.ajax({
                           type: 'POST',
-                          url: 'http://snowywords2.ddns.net:5000/faqfeedback',
+                          url: './faqfeedback',
                           data: datatosenty,
                           dataType:'json',
                           contentType: "application/json",
@@ -158,7 +158,7 @@
                     console.log(typeof(datatosentn));
                     $.ajax({
                           type: 'POST',
-                          url: 'http://snowywords2.ddns.net:5000/faqfeedback',
+                          url: './faqfeedback',
                           data: datatosentn,
                           dataType:'json',
                           contentType: "application/json",
