--- a/Kaidee/KaideeV/templates/verifyLevel1.html
+++ b/Kaidee/KaideeV/templates/verifyLevel1.html
@@ -109,7 +109,7 @@
 </div>
 </div>
 
-<form action="http://snowywords2.ddns.net:5000/upload" method="post" enctype="multipart/form-data">
+<form action="./upload" method="post" enctype="multipart/form-data">
     <input id="fileInput" name="file" type="file" style="display:none;" />
     <input id="theButton" type="button" value="Upload" />
 </form>
