--- a/Kaidee/KaideeV/templates/faq.html
+++ b/Kaidee/KaideeV/templates/faq.html
@@ -31,15 +31,6 @@
                 height: 100%;
                 margin: 0 auto -55px; /* the bottom margin is the negative value of the footer's height */
             }
-            .footerr{
-                height: 55px; /* .push must be the same height as .footer */
-                background: #efefef;
-                text-indent: 20px;
-                vertical-align: middle;
-            }
-            .push{
-                height: 80px; /* .push must be the same height as .footer */
-            }
 
 
         </style>
@@ -186,7 +177,7 @@
 
 
         		<!-- CHAT UI -->
-        		<div class="container">
+        		<div class="container" style="z-index: 100;">
         				<div class="row chat-window col-xs-10 col-md-3" id="chat_window_1">
         						<div class="col-xs-12 col-md-12">
         							<div class="panel panel-default">
