--- a/Kaidee/KaideeV/templates/index.html
+++ b/Kaidee/KaideeV/templates/index.html
@@ -37,7 +37,7 @@
 </head>
 
 <body>
-
+        <div class="wrapper">
     <nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
 			<button id="btnsell-toggle" type="button" class="navbar-toggle btn btn-warning btnsell-toggle">ขาย</button>
@@ -64,6 +64,11 @@
     <br>ของ
     </div>
 -->
+<div class="push"></div>
+			 <div class="footerr">
+					 <a href="./help"><h3 id='openfaq' style="line-height:50px; height:50px;">FAQ</h3></a>
+			 </div>
+			 
     <script>
         $('#btnsell').click(function(){
                 window.location.href = "./upload_sale_1";
