--- a/Kaidee/KaideeV/templates/uploadSale3.html
+++ b/Kaidee/KaideeV/templates/uploadSale3.html
@@ -45,6 +45,7 @@
 
     </head>
     <body>
+              <div class="wrapper">
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <nav class="navbar navbar-default navbar-fixed-top">
@@ -95,9 +96,10 @@
             <button id="goToNextPage" style="float:right;" type="button" class="btn btn-success">ไปต่อ</button>
         </div>
 
-        <div class="footer">
-            <a href="./help"><h3 id='openfaq'>FAQ</h3></a>
-        </div>
+        <div class="push"></div>
+               <div class="footerr">
+                   <a href="./help"><h3 id='openfaq' style="line-height:50px; height:50px;">FAQ</h3></a>
+               </div>
         <script>
 
 
