--- a/Kaidee/KaideeV/templates/uploadSale4.html
+++ b/Kaidee/KaideeV/templates/uploadSale4.html
@@ -51,6 +51,7 @@
 
     </head>
     <body>
+          <div class="wrapper">
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <nav class="navbar navbar-default navbar-fixed-top">
@@ -119,9 +120,10 @@
             <button id="goToNextPage" style="float:right;" type="button" class="btn btn-success">ไปต่อ</button>
         </div>
 
-        <div class="footer">
-            <a href="./help"><h3 id='openfaq'>FAQ</h3></a>
-        </div>
+        <div class="push"></div>
+               <div class="footerr">
+                   <a href="./help"><h3 id='openfaq' style="line-height:50px; height:50px;">FAQ</h3></a>
+               </div>
         <script>
             var array1 = ["ไม่ได้เลือกจังหวัด","กรุงเทพมหานคร","ปทุมธานี","สมุทรปราการ"]
             var array2 = ["ไม่ได้เลือกอำเภอ","ลำลูกกา","ธัณญบุรี","เมือง"]
