--- a/Kaidee/KaideeV/templates/uploadSale6.html
+++ b/Kaidee/KaideeV/templates/uploadSale6.html
@@ -34,6 +34,7 @@
         </style>
     </head>
     <body>
+          <div class="wrapper">
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <nav class="navbar navbar-default navbar-fixed-top">
@@ -88,9 +89,10 @@
             });
         </script>
 
-        <div class="footer">
-            <a href="./help"><h3 id='openfaq'>FAQ</h3></a>
-        </div>
+        <div class="push"></div>
+               <div class="footerr">
+                   <a href="./help"><h3 id='openfaq' style="line-height:50px; height:50px;">FAQ</h3></a>
+               </div>
         <!-- CHAT UI -->
         <div class="container">
             <div class="row chat-window col-xs-10 col-md-3" id="chat_window_1">
