--- a/Kaidee/KaideeV/templates/Product.html
+++ b/Kaidee/KaideeV/templates/Product.html
@@ -36,7 +36,7 @@
 </head>
 
 <body>
-
+        <div class="wrapper">
     <nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
 			<button id="btnsell-toggle" type="button" class="navbar-toggle btn btn-warning btnsell-toggle">ขาย</button>
@@ -144,7 +144,11 @@
     <br>ของ
     </div>
 -->
-
+<div class="push"></div>
+			 <div class="footerr">
+					 <a href="./help"><h3 id='openfaq' style="line-height:50px; height:50px;">FAQ</h3></a>
+			 </div>
+			 
 <!-- CHAT UI -->
 <div class="container">
 		<div class="row chat-window col-xs-10 col-md-3" id="chat_window_1">
