--- a/Kaidee/KaideeV/templates/VerifyAdmin.html
+++ b/Kaidee/KaideeV/templates/VerifyAdmin.html
@@ -49,6 +49,7 @@
 </head>
 
 <body>
+          <div class="wrapper">
 
 	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
