--- a/Kaidee/KaideeV/templates/list.htm
+++ b/Kaidee/KaideeV/templates/list.htm
@@ -29,7 +29,7 @@
 </head>
 
 <body>
-
+        <div class="wrapper">
 	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
 			<button id="btnsell-toggle" type="button" class="navbar-toggle btn btn-warning btnsell-toggle">ขาย</button>
@@ -59,7 +59,11 @@
 			</div>
 		</div>
 	</div>
-
+	
+	<div class="push"></div>
+				 <div class="footerr">
+						 <a href="./help"><h3 id='openfaq' style="line-height:50px; height:50px;">FAQ</h3></a>
+				 </div>
 
 	<!-- CHAT UI -->
 	<div class="container">
