--- a/Kaidee/KaideeV/templates/result.html
+++ b/Kaidee/KaideeV/templates/result.html
@@ -34,6 +34,7 @@
   </head>
 
   <body style="margin-bottom:60px;">
+            <div class="wrapper">
     <nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
 			<button id="btnsell-toggle" type="button" class="navbar-toggle btn btn-warning btnsell-toggle">ขาย</button>
