--- a/Kaidee/KaideeV/templates/uploadSale1.html
+++ b/Kaidee/KaideeV/templates/uploadSale1.html
@@ -60,6 +60,7 @@
 
     </head>
     <body>
+              <div class="wrapper">
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <nav class="navbar navbar-default navbar-fixed-top">
@@ -133,9 +134,10 @@
             <button id="goToNextPage" style="float:right;" type="button" class="btn btn-success" >ไปต่อ</button>
         </div>
 
-        <footer class="footer">
-            <a href="./help"><h3 id='openfaq'>FAQ</h3></a>
-        </footer>
+        <div class="push"></div>
+               <div class="footerr">
+                   <a href="./help"><h3 id='openfaq' style="line-height:50px; height:50px;">FAQ</h3></a>
+               </div>
 
         <script>
             var catearray = ["ไม่ได้เรื่องประเภท","พระเครื่อง","เสื้อผ้า","หนังสือ"]
