--- a/Kaidee/KaideeV/templates/uploadSale5.html
+++ b/Kaidee/KaideeV/templates/uploadSale5.html
@@ -68,6 +68,7 @@
         </style>
     </head>
     <body>
+          <div class="wrapper">
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <div class="wrapper">
