--- a/Kaidee/KaideeV/templates/Product.html
+++ b/Kaidee/KaideeV/templates/Product.html
@@ -52,7 +52,7 @@
 	</nav>
 
 	<div class="container" style="text-align: center; margin: 0 auto;float: none;">
-		<img class="img-responsive tutorial" href="#" src="img/Step3.png" width="70%" height="70%" style="text-align: center; margin: 0 auto;float: none;">
+		<img class="img-responsive tutorial" href="#" src="img/Step3.png" width="35%" style="text-align: center; margin: 0 auto;float: none;">
 
 		</br>
 	</div>
