admin view big picture

--- a/Kaidee/KaideeV/templates/Product.html
+++ b/Kaidee/KaideeV/templates/Product.html
@@ -92,7 +92,7 @@
 		            	<span id="price" class="price-mb">3,800</span>
 					</li>
 		            <li>
-                <span class="call-to-buyer" id='createNewChat' style="cursor:nw-resize">คุยกับผู้ขาย</span>
+                <span class="call-to-buyer" id='createNewChat' style="cursor:pointer">คุยกับผู้ขาย</span>
 					</li>
 		            <li>
                 <span class="call-to-buyer">กดดูเบอร์โทรผู้ขาย</class>
