--- a/Kaidee/KaideeV/templates/verifyResult.html
+++ b/Kaidee/KaideeV/templates/verifyResult.html
@@ -73,7 +73,7 @@
         กรุณารอการตรวจสอบต่อไป
 			</div>
       <div style="margin-top:250px; text-align:center;">
-          <div style="display:inline-block; border-radius: 10px; padding-left: 15px; padding-right:15px; background-color:orange; color:white; font-size:25px; height:50px; line-height:50px; ">กลับไปยังหน้าหลัก</div>
+          <a href="./verification"><div style="display:inline-block; border-radius: 10px; padding-left: 15px; padding-right:15px; background-color:orange; color:white; font-size:25px; height:50px; line-height:50px; ">กลับไปยังหน้าหลัก</div></a>
       </div>
 		</div>
 	</div>
