--- a/Kaidee/KaideeV/templates/verifyLevel2.html
+++ b/Kaidee/KaideeV/templates/verifyLevel2.html
@@ -91,7 +91,7 @@
     </div>
     <div class="upload-container">
       <div class="col-md-4" style="border-radius: 10px; background: #eeeeee; width: 550px; height: 350px;">
-        <img src="img/choosePic.png" id="file" style="border-radius: 10px; margin-top:25px; margin-left:25px; background-color:white; height:250px;">
+        <img id="file" src="img/choosePic.png" style="position: absolute; margin: auto; top: 25px; left: 0; right: 0; border-radius: 10px; background-color:white; height:250px;">
         </img>
         <div style="display:inline-block; border-radius: 10px; padding-left: 15px; padding-right:15px; background-color:#6DDA58  ; color:white; font-size:25px; height:50px; line-height:50px;position:absolute; bottom:10px; left:225px; ">
           อัพโหลด
@@ -110,7 +110,7 @@
 </div>
     </div>
 
-    <form action="./upload?vlevel=2" method="post" enctype="multipart/form-data">
+    <form action="./upload?vlevel=1" method="post" enctype="multipart/form-data" hidden>
        <!-- <input id="fileInput" name="file" type="file"  style="display:none;"> /> -->
           <input id="fileInput" name="file" type="file" />
         <input id="theButton" type="submit" name="u_button" value="Upload" />
@@ -133,6 +133,25 @@
             document.getElementById('theButton').click();
           };
         }
+
+
+        function readURL(input) {
+
+          if (input.files && input.files[0]) {
+            var reader = new FileReader();
+
+            reader.onload = function (e) {
+              $('#file').attr('src', e.target.result);
+            }
+
+            reader.readAsDataURL(input.files[0]);
+          }
+        }
+
+        $("#fileInput").change(function(){
+          readURL(this);
+        });
+
     </script>
 
     <!-- CHAT UI -->
