--- a/Kaidee/KaideeV/templates/verifyLevel3.html
+++ b/Kaidee/KaideeV/templates/verifyLevel3.html
@@ -90,6 +90,11 @@
       </div>
     </div>
     <div class="upload-container">
+      <div class="col-md-12" style="border-radius: 10px;">
+        <div id="OTPCode" style="font-size:25px;">
+          OTP = zzzz
+        </div>
+      </div>
       <div class="col-md-4" style="border-radius: 10px; background: #eeeeee; width: 550px; height: 350px;">
         <img id="file" src="img/choosePic.png" style="position: absolute; margin: auto; top: 25px; left: 0; right: 0; border-radius: 10px; background-color:white; height:250px;">
         </img>
@@ -110,9 +115,9 @@
     </div>
     </div>
 
-    <form action="./upload?vlevel=1" method="post" enctype="multipart/form-data" hidden>
+    <form id="upupForm" action="./upload?vlevel=3" method="post" enctype="multipart/form-data" hidden>
        <!-- <input id="fileInput" name="file" type="file"  style="display:none;"> /> -->
-          <input id="fileInput" name="file" type="file" />
+          <input id="fileInput" name="file" type="file"/>
         <input id="theButton" type="submit" name="u_button" value="Upload" />
     </form>
 
@@ -125,14 +130,21 @@
                 window.location.href = "./upload_sale_1";
 
         });
-        window.onload = function () {
-          document.getElementById('file').onclick = function() {
-            document.getElementById('fileInput').click();
-          };
-          document.getElementById('upload').onclick = function() {
-            document.getElementById('theButton').click();
-          };
-        }
+
+                window.onload = function () {
+                  var OTP = Math.floor(Math.random() * 8999) + 1000;
+                  document.getElementById('file').onclick = function() {
+                    document.getElementById('fileInput').click();
+                  };
+                  document.getElementById('upload').onclick = function() {
+                    document.getElementById('theButton').click();
+                  };
+                  document.getElementById('OTPCode').innerHTML = "OTP: "+OTP
+                  var frm = document.getElementById('upupForm') || null;
+                  if(frm) {
+                    frm.action = './upload?vlevel=3&OTP='+OTP;
+                  }
+                }
 
         function readURL(input) {
 
