--- a/Kaidee/KaideeV/templates/verifyLevel3.html
+++ b/Kaidee/KaideeV/templates/verifyLevel3.html
@@ -88,6 +88,9 @@
         ** ทางเว็บไซด์ kaidee.com จะเก็บรูปภาพที่ถูกใส่ลายน้ำแล้วเท่านั้น เพื่อป้องกันการนำไปใช้กระทำการอื่นๆ ที่นอกเหนือจาก <br>
         &nbsp;&nbsp;&nbsp;&nbsp; ที่ได้กล่าวไว้ข้างต้น
       </div>
+      <div class="verify-subtitle">
+        กรุณาถ่ายรูปหลักฐานการยืนยันและกระดาษที่เขียนรหัสOTPด้านล่าง
+      </div>
     </div>
     <div class="upload-container">
       <div class="col-md-12" style="border-radius: 10px;">
