--- a/Kaidee/KaideeV/templates/faq.html
+++ b/Kaidee/KaideeV/templates/faq.html
@@ -68,10 +68,11 @@
             <button id="no">ไม่มีประโยชน์</button>
         </div>
         </div>
-         <div class="push"></div>
-        <div class="footerr">
-            <a href="./help" id='openfaq'><h3 style="line-height:50px; height:50px;">FAQ</h3></a>
-        </div>
+        <hr>
+        <footer id="footer" class="wrapper">
+        <div class="container"><footer role="link" class="copy-and-info"><div class="footer-infomation"><p class="copyright clear"><span class="company"></span></p><p class="copyright clear">
+        <span class="helps"><a href="./help" to="/helps/" data-name="helps" accesskey="9">ช่วยเหลือ</a></span>
+        </div></footer>
 
         <script>
             var result = []
