--- a/Kaidee/KaideeV/templates/index.html
+++ b/Kaidee/KaideeV/templates/index.html
@@ -56,7 +56,13 @@
         <a href="./list"><img class="center" src="img/home.png" style="text-align:center;"></a>
     </div>
 	</div>
-
+	<br><br><br><br><br>
+	<br><br><br>
+	<hr>
+	<footer id="footer" class="wrapper">
+	<div class="container"><footer role="link" class="copy-and-info"><div class="footer-infomation"><p class="copyright clear"><span class="company"></span></p><p class="copyright clear">
+	<span class="helps"><a href="./help" to="/helps/" data-name="helps" accesskey="9">ช่วยเหลือ</a></span>
+	</div></footer>
 
 <!--
     <div class='circle-multiline'>
@@ -64,10 +70,6 @@
     <br>ของ
     </div>
 -->
-<div class="push"></div>
-			 <div class="footerr">
-					 <a href="./help"><h3 id='openfaq' style="line-height:50px; height:50px;">FAQ</h3></a>
-			 </div>
 
     <script>
         $('#btnsell').click(function(){
