--- a/Kaidee/KaideeV/templates/uploadSale3.html
+++ b/Kaidee/KaideeV/templates/uploadSale3.html
@@ -96,13 +96,14 @@
             <button id="goToNextPage" style="float:right;" type="button" class="btn btn-success">ไปต่อ</button>
         </div>
 
-        <div class="push"></div>
-               <div class="footerr">
-                   <a href="./help"><h3 id='openfaq' style="line-height:50px; height:50px;">FAQ</h3></a>
-               </div>
+
+        <hr>
+        <footer id="footer" class="wrapper">
+        <div class="container"><footer role="link" class="copy-and-info"><div class="footer-infomation"><p class="copyright clear"><span class="company"></span></p><p class="copyright clear">
+        <span class="helps"><a href="./help" to="/helps/" data-name="helps" accesskey="9">ช่วยเหลือ</a></span>
+        </div></footer>
+
         <script>
-
-
 
             $('#goToNextPage').click(function(){
                 window.localStorage.setItem("pdetail",JSON.stringify($('textarea#detail').val()));
