--- a/Kaidee/KaideeV/templates/uploadSale6.html
+++ b/Kaidee/KaideeV/templates/uploadSale6.html
@@ -89,10 +89,13 @@
             });
         </script>
 
-        <div class="push"></div>
-               <div class="footerr">
-                   <a href="./help"><h3 id='openfaq' style="line-height:50px; height:50px;">FAQ</h3></a>
-               </div>
+
+        <hr>
+        <footer id="footer" class="wrapper">
+        <div class="container"><footer role="link" class="copy-and-info"><div class="footer-infomation"><p class="copyright clear"><span class="company"></span></p><p class="copyright clear">
+        <span class="helps"><a href="./help" to="/helps/" data-name="helps" accesskey="9">ช่วยเหลือ</a></span>
+        </div></footer>
+
         <!-- CHAT UI -->
         <div class="container">
             <div class="row chat-window col-xs-10 col-md-3" id="chat_window_1">
