--- a/Kaidee/KaideeV/templates/verificationUpload.html
+++ b/Kaidee/KaideeV/templates/verificationUpload.html
@@ -84,10 +84,12 @@
       <button type="button" onclick="skip()" class="btn btn-warning center-block">ข้ามขั้นตอนนี้</button>
     </div>
 
-    <div class="push"></div>
-           <div class="footerr">
-               <a href="./help"><h3 id='openfaq' style="line-height:50px; height:50px;">FAQ</h3></a>
-           </div>
+
+    <hr>
+    <footer id="footer" class="wrapper">
+    <div class="container"><footer role="link" class="copy-and-info"><div class="footer-infomation"><p class="copyright clear"><span class="company"></span></p><p class="copyright clear">
+    <span class="helps"><a href="./help" to="/helps/" data-name="helps" accesskey="9">ช่วยเหลือ</a></span>
+    </div></footer>
 
 <script>
   function skip() {
