--- a/Kaidee/KaideeV/templates/verifyResult.html
+++ b/Kaidee/KaideeV/templates/verifyResult.html
@@ -78,9 +78,12 @@
 		</div>
 	</div>
     </div>
-        <div class="footer">
-            <a href="./help"><h3 id='openfaq'>FAQ</h3></a>
-        </div>
+
+		<hr>
+		<footer id="footer" class="wrapper">
+		<div class="container"><footer role="link" class="copy-and-info"><div class="footer-infomation"><p class="copyright clear"><span class="company"></span></p><p class="copyright clear">
+		<span class="helps"><a href="./help" to="/helps/" data-name="helps" accesskey="9">ช่วยเหลือ</a></span>
+		</div></footer>
  <script>
         $('#btnsell').click(function(){
                 window.location.href = "./upload_sale_1";
