--- a/Kaidee/KaideeV/templates/verifyLevel2.html
+++ b/Kaidee/KaideeV/templates/verifyLevel2.html
@@ -101,7 +101,7 @@
       <div class="col-md-4" style="border-radius: 10px; background: #eeeeee; width: 550px; height: 350px;">
         <img id="file" src="img/choosePic.png" style="position: absolute; margin: auto; top: 25px; left: 0; right: 0; border-radius: 10px; background-color:white; height:250px;">
         </img>
-        <div style="display:inline-block; border-radius: 10px; padding-left: 15px; padding-right:15px; background-color:#6DDA58  ; color:white; font-size:25px; height:50px; line-height:50px;position:absolute; bottom:10px; left:225px; ">
+        <div id="upload" style="display:inline-block; border-radius: 10px; padding-left: 15px; padding-right:15px; background-color:#6DDA58  ; color:white; font-size:25px; height:50px; line-height:50px;position:absolute; bottom:10px; left:225px; ">
           อัพโหลด
         </div>
       </div>
