- Add Login and Logout link into top bar for index.html , list.html , product.html, faq.html , help.html

--- a/Kaidee/KaideeV/templates/Product.html
+++ b/Kaidee/KaideeV/templates/Product.html
@@ -44,6 +44,7 @@
 
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-right">
+                    <li><a id="loginout" href="./loginpage">ลงชื่อเข้าใช้</a></li>
 					<li><a href="/verification">แก้ไขข้อมูลผู้ขาย</a></li>
 					<li><button id="btnsell" type="button" class="btn btn-warning">ขาย</button></li>
 				</ul>
@@ -199,6 +200,16 @@
 <script>
 
 $(document).ready(function(){
+     $.getJSON('./session_data', function(data) {
+                    if(data == 404){
+                        $('#loginout').attr('href','./loginpage');
+                        $('#loginout').text('ลงชื่อเข้าใช้');
+                    }else{
+                        $('#loginout').attr('href','./logout');
+                        $('#loginout').text('ลงชื่อออก');
+                    }
+                });
+    
 	var itemId = $(document).getUrlParam("id");
 	$.get(`./view_product/`+itemId, function(data, status){
 			console.log(data);
