--- a/Kaidee/KaideeV/templates/faq.html
+++ b/Kaidee/KaideeV/templates/faq.html
@@ -57,6 +57,7 @@
 			<!-- <a class="navbar-brand" href="#">Kaidee</a> -->
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-right">
+                    li><a id="loginout" href="./loginpage">ลงชื่อเข้าใช้</a></li>
 					<li><a href="/verification">แก้ไขข้อมูลผู้ขาย</a></li>
 					<li><button id="btnsell" type="button" class="btn btn-warning">ขาย</button></li>
 				</ul>
@@ -114,8 +115,12 @@
 
                     if(data == 404){
                         userID = null;
+                         $('#loginout').attr('href','./loginpage');
+                        $('#loginout').text('ลงชื่อเข้าใช้');
                     }else{
                         userID = data.UserID
+                         $('#loginout').attr('href','./logout');
+                        $('#loginout').text('ลงชื่อออก');
                     }
 
                 });
