--- a/Kaidee/KaideeV/templates/index.html
+++ b/Kaidee/KaideeV/templates/index.html
@@ -45,6 +45,7 @@
 
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-right">
+                    <li><a id="loginout" href="./loginpage">ลงชื่อเข้าใช้</a></li>
 					<li><a href="./verification">แก้ไขข้อมูลผู้ขาย</a></li>
 					<li><button id="btnsell" type="button" class="btn btn-warning">ขาย</button></li>
 				</ul>
@@ -72,10 +73,28 @@
 -->
 
     <script>
+        
         $('#btnsell').click(function(){
                 window.location.href = "./upload_sale_1";
 
         });
+        
+        window.onload = function() {
+            
+               $.getJSON('./session_data', function(data) {
+                    if(data == 404){
+                        $('#loginout').attr('href','./loginpage');
+                        $('#loginout').text('ลงชื่อเข้าใช้');
+                    }else{
+                        $('#loginout').attr('href','./logout');
+                        $('#loginout').text('ลงชื่อออก');
+                    }
+                });
+            
+        }
+        
+        
+        
     </script>
 
 		<!-- CHAT UI -->
@@ -128,5 +147,6 @@
 						</div>
 						</div>
 				</div>
+    
 </body>
 </html>
