--- a/Kaidee/KaideeV/templates/verifyFail.html
+++ b/Kaidee/KaideeV/templates/verifyFail.html
@@ -69,17 +69,17 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 verify-result-text">
-				ระบบได้บันทึกข้อมูลของท่านไว้เรียบร้อยแล้ว <br>
-        กรุณารอการตรวจสอบต่อไป
+				การอัพโหลดมีปัญหา <br>
+        กรุณาลองใหม่อีกครั้ง
 			</div>
       <div style="margin-top:250px; text-align:center;">
-          <a href="./verification"><div style="display:inline-block; border-radius: 10px; padding-left: 15px; padding-right:15px; background-color:orange; color:white; font-size:25px; height:50px; line-height:50px; ">กลับไปยังหน้าหลัก</div></a>
+          <a href="javascript:history.back()"><div style="display:inline-block; border-radius: 10px; padding-left: 15px; padding-right:15px; background-color:orange; color:white; font-size:25px; height:50px; line-height:50px; ">กลับไปยังหน้าหลัก</div></a>
       </div>
 		</div>
 	</div>
     </div>
 
-<br><br><br><br><br>
+		<br><br><br><br><br>
 		<hr>
 		<footer id="footer" class="wrapper">
 		<div class="container"><footer role="link" class="copy-and-info"><div class="footer-infomation"><p class="copyright clear"><span class="company"></span></p><p class="copyright clear">
